@@ -65,13 +65,13 @@ get_header(); ?>
 
 			<?php /* Start the Loop */ ?>
 			<?php while ( have_posts() ) : the_post(); ?>
-				<?php get_template_part( 'content', get_post_format() ); ?>
+				<?php get_template_part( 'template-parts/posts/content', get_post_format() ); ?>
 			<?php endwhile; ?>
 
 			<?php manduca_page_navigation(); ?>
 
 		<?php else : ?>
-			<?php get_template_part( 'content', 'none' ); ?>
+			<?php get_template_part( 'template-parts/content', 'none' ); ?>
 		<?php endif; ?>
 
 		</main><!-- #content -->
