@@ -11,7 +11,7 @@ get_header(); ?>
 
 			<?php /* Start the Loop */ ?>
 			<?php while ( have_posts() ) : the_post(); ?>
-				<?php get_template_part( 'content' ); ?>
+				<?php get_template_part( 'template-parts/posts/content' ); ?>
 			<?php endwhile; ?>
 
 			<?php manduca_page_navigation(); ?>
