@@ -10,7 +10,7 @@ get_header(); ?>
 	<div id="primary" class="site-content">
 		<main id="content">
 			<?php while ( have_posts() ) : the_post(); ?>
-				<?php get_template_part( 'content', 'page' ); ?>
+				<?php get_template_part( 'template-parts/posts/content', 'page' ); ?>
 				<?php comments_template(); ?>
 			<?php endwhile; // end of the loop. ?>
 
